test/fail/ub_packing13.v3
//@execute = 42
type T(x: i2, y: i2) #unboxed #packed;

def main() -> int {
	for (i = -2; i < 2; i++) {
		for (j = -2; j < 2; j++) {
			var t = T(i2.view(i), i2.view(j));
			if (!eq(t, i2.view(i), i2.view(j))) return -11;
		}
	}
	return 42;
}

def eq(t: T, x: i2, y: i2) -> bool {
	return t.x == x && t.y == y;
}
